--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -90,13 +90,15 @@ exten => _*77XXXX,n,Wait(1)
 exten => _*77XXXX,n,Set(TGT=${EXTEN:3})
 exten => _*77XXXX,n,Set(HH=${EXTEN:3:2})
 exten => _*77XXXX,n,Set(MM=${EXTEN:5:2})
-exten => _*77XXXX,n,Set(CHAN=${CHANNEL(peername)})
+exten => _*77XXXX,n,Gosub(macro-getpeername,s,1)
+exten => _*77XXXX,n,Set(CHAN=${MPEER})
+exten => _*77XXXX,n,Set(TECH=${CHANNEL(channeltype)})
 exten => _*77XXXX,n,GotoIf($[${HH} < 0]?valerr)
 exten => _*77XXXX,n,GotoIf($[${HH} > 23]?valerr)
 exten => _*77XXXX,n,GotoIf($[${MM} < 0]?valerr)
 exten => _*77XXXX,n,GotoIf($[${MM} > 59]?valerr)
 exten => _*77XXXX,n,GotoIf($[${MM} > 59]?valerr)
-exten => _*77XXXX,n,System(/var/lib/asterisk/scripts/wakeup.sh ${TGT} ${CHAN})
+exten => _*77XXXX,n,System(/var/lib/asterisk/scripts/wakeup.sh ${TGT} ${CHAN} ${TECH})
 exten => _*77XXXX,n,Playtones(!532/500,!0/200)
 exten => _*77XXXX,n,Wait(5)
 exten => _*77XXXX,n,Hangup
@@ -107,7 +109,8 @@ exten => _*77XXXX,n,Hangup
 ;キャンセル
 exten => *78,1,NoOp(モーニングコール取り消し)
 exten => *78,n,Answer
-exten => *78,n,Set(CHAN=${CHANNEL(peername)})
+exten => *78,n,Gosub(macro-getpeername,s,1)
+exten => *78,n,Set(CHAN=${MPEER})
 exten => *78,n,System(/var/lib/asterisk/scripts/wakeup_cancel.sh ${CHAN})
 exten => *78,n,Wait(1)
 exten => *78,n,Playtones(!532/500,!0/200)
@@ -134,6 +137,41 @@ exten => *MCALL,n,Hangup
 ;動的コールパーク
 exten => _*70[0-8],1,NoOp
 exten => _*70[0-8],n,Goto(parkedcalls,${EXTEN:1},1)
+
+;ABS側での自己保留関連
+;自己保留(セルフパーク)解除
+exten => *7,1,NoOp(セルフパーク解除)
+exten => *7,n,GoSub(macro-chkrestrict,s,1,(1))
+exten => *7,n,GoSub(macro-whoami,s,1)
+exten => *7,n,Set(PARKINGLOT=${MPEER})
+exten => *7,n,Set(SFPNUM=${STRREPLACE(PARKINGLOT,"phone","")})
+exten => *7,n,Set(SFPNUM=${MATH(${SFPNUM}*2,i)})
+exten => *7,n,Set(SFPNUM=${MATH(${SFPNUM}+7001,i)})
+exten => *7,n,Set(SFPS=${DEVICE_STATE(park:${SFPNUM}@selfpark)})
+exten => *7,n,GotoIf($["${SFPS}"="INUSE"]?dosfpu)
+exten => *7,n,Answer
+exten => *7,n,Wait(1)
+exten => *7,n,Morsecode(N)
+exten => *7,n,Hangup
+exten => *7,n(dosfpu),Dial(Local/${SFPNUM}@selfpark,,B(selfpark-handler,s,1))
+;番号指定での自己保留ピックアップ
+exten => _*73.,1,NoOp(セルフパークピックアップ)
+exten => _*73.,n,GotoIf($["${DB(ABS/SPBU)}"!="1"]?nogo)
+exten => _*73.,n,GoSub(macro-chkrestrict,s,1,(1))
+exten => _*73.,n,GoSub(macro-whoami,s,1)
+exten => _*73.,n,Set(SPTARGET=${EXTEN:3})
+exten => _*73.,n,Set(PARKINGLOT=${DB(ABS/EXT/${SPTARGET})})
+exten => _*73.,n,GotoIf($["${PARKINGLOT}"=""]?nogo)
+exten => _*73.,n,Set(SFPNUM=${STRREPLACE(PARKINGLOT,"phone","")})
+exten => _*73.,n,Set(SFPNUM=${MATH(${SFPNUM}*2,i)})
+exten => _*73.,n,Set(SFPNUM=${MATH(${SFPNUM}+7001,i)})
+exten => _*73.,n,Set(SFPS=${DEVICE_STATE(park:${SFPNUM}@selfpark)})
+exten => _*73.,n,GotoIf($["${SFPS}"="INUSE"]?dosfpu)
+exten => _*73.,n,Answer
+exten => _*73.,n,Wait(1)
+exten => _*73.,n,Morsecode(N)
+exten => _*73.,n(nogo),Hangup
+exten => _*73.,n(dosfpu),Dial(Local/${SFPNUM}@selfpark,,B(selfpark-handler,s,1))
 
 ;着信設定
 ;着信拒否番号設定
