--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -20,8 +20,9 @@ exten => s,n,GotoIf($["${DESTNUM:1:1}" = "5"]?inter)
 exten => s,n,GotoIf($["${DESTNUM:1:1}" = "6"]?inter)
 exten => s,n,GotoIf($["${DESTNUM:1:1}" = "7"]?inter)
 exten => s,n,NoOp(外線着信To: ${DESTNUM})
-;着信番号の桁数が異なる場合には以下の行を調整のこと
-exten => s,n,Set(DESTNUM=${DESTNUM:1:10})
+;
+exten => s,n,Gosub(get-mydigits,s,1)
+exten => s,n,Set(DESTNUM=${DESTNUM:1:${MDIGI}})
 exten => s,n,NoOp(着信番号: ${DESTNUM})
 exten => s,n,Goto(incoming,${DESTNUM},1)
 ;内線着信処理
@@ -38,20 +39,23 @@ exten => s,n,GotoIf($["${DESTNUM:1:1}"!=""]?skippj)
 ;chan_sipではない場合にはPJSIPで取得
 exten => s,n,Set(DESTNUM=${PJSIP_HEADER(read,To)})
 exten => s,n(skippj),NoOp(外線着信To: ${DESTNUM})
-;10桁以外で着信する場合には修正必要
-exten => s,n,Set(DESTNUM=${DESTNUM:5:10})
+;
+exten => s,n,Gosub(get-mydigits,s,1)
+exten => s,n,Set(DESTNUM=${DESTNUM:5:${MDIGI}})
 exten => s,n,Goto(incoming,${DESTNUM},1)
 
 ;ひかり電話OGW前処理2
 [from-hikari-ogw]
 exten => s,1,NoOp(ひかり電話OG/VG着番処理)
+exten => s,n,GotoIf($["${CHANNEL(channeltype)}"="PJSIP"]?pjhh)
 exten => s,n,Set(DESTNUM=${SIP_HEADER(To)})
 exten => s,n,GotoIf($["${DESTNUM:1:1}"!=""]?skippj)
 ;chan_sipではない場合にはPJSIPで取得
-exten => s,n,Set(DESTNUM=${PJSIP_HEADER(read,To)})
+exten => s,n(pjhh),Set(DESTNUM=${PJSIP_HEADER(read,To)})
 exten => s,n(skippj),NoOp(外線着信To: ${DESTNUM})
-;10桁以外で着信する場合には修正必要
-exten => s,n,Set(DESTNUM=${DESTNUM:5:10})
+;
+exten => s,n,Gosub(get-mydigits,s,1)
+exten => s,n,Set(DESTNUM=${DESTNUM:5:${MDIGI}})
 exten => s,n,Goto(incoming,${DESTNUM},1)
 
 ;楽天OpenGate着信用前処理
