--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -7,6 +7,7 @@
 ;exten => 8765,1,Gosub(macro-AquesTalkPi,s,1(明日の天気は晴れ)
 ;exten => 8765,n,MusicOnHold
 ;exten => 8765,n,Hangup
+
 ;
 ;特殊ノード(Local Ring)
 exten => localring,1,NoOp(localring)
@@ -15,11 +16,12 @@ exten => localring,n,Wait(10)
 exten => localring,n,Goto(lp1)
 ;
 exten => _X.,1,NoOp(内線発信部)
-; Experimental Start
+; 実験的実装
 ;メッセージングサポート
 exten => _X.,n,Set(MTARGET=${EXTEN})
 exten => _X.,n,GotoIf($["${CHANNEL(name)}"="Message/ast_msg_queue"]?msgsender,s,1)
-; Experimental End
+; メッセージングここまで
+
 ;外線からのブラインド転送チェック(ピア名が内線発にならないケース)
 ;転送でなければ内線処理へ
 exten => _X.,n,GotoIf($["${SIPTRANSFER}"!="yes"]?echk)
@@ -36,16 +38,17 @@ exten => _X.,n,GotoIf($["${THISPOSITION}"="OUTBOUND"]?btrans)
 ;内線チェック
 exten => _X.,n(echk),Gosub(macro-extcheck,s,1)
 ;自ピア名からCID設定
-exten => _X.,n,Set(PEER=${CHANNEL(peername)})
-exten => _X.,n,GotoIf($["${PEER}"!=""]?doc)
 exten => _X.,n,Set(PEER=${CHANNEL(endpoint)})
+exten => _X.,n,GotoIf($["${PEER}"!=""]?doc)
+exten => _X.,n,Set(PEER=${CHANNEL(peername)})
 exten => _X.,n(doc),Gosub(macro-peer2ext,s,1)
 exten => _X.,n,Set(CALLERID(num)=${EXT})
+exten => _X.,n,Set(DYNAMIC_FEATURES=selfpark)
 ;CID名がDBに設定されていれば使用
 exten => _X.,n,Gosub(macro-cidnamecheck,s,1)
 ;ダイヤルされた番号が"そのまま"内線に存在するなら内線
 exten => _X.,n,Set(TMP=${DB(ABS/EXT/${EXTEN})})
-exten => _X.,n,GotoIf($["${TMP}"!=""]?btrans)
+exten => _X.,n,GotoIf($["${TMP}"!=""]?inhouse)
 ;ダイヤル先がプレフィクスかどうかチェック
 ;プレフィクスに一致する場合には外線発信へ
 exten => _X.,n,Set(TMP=${DB(ABS/OGP1)})
@@ -61,6 +64,8 @@ exten => _X.,n,Set(PFNN=2)
 exten => _X.,n,NoOp("${TMP}"="${EXTEN:0:${PFLL}}")
 exten => _X.,n,GotoIf($["${TMP}"="${EXTEN:0:${PFLL}}"]?prefixout,${EXTEN},1)
 ;先頭がプレフィクスに一致しなければ内線
+;内線規制情報チェック
+exten => _X.,n(inhouse),Gosub(macro-chkrestrict,s,1(1))
 ;外線ブラインド転送時の飛び先
 exten => _X.,n(btrans),NoOp(外線を転送)
 ;ダイヤル先のピア名を取得
@@ -77,13 +82,13 @@ exten => _X.,n,GotoIf($["${PEER:0:1}"="R"]?rmtext)
 ;単独内線ダイヤル実行
 exten => _X.,n,NoOp(通常内線)
 ;ダイヤルオプション取得
-exten => _X.,n,Set(OPT=${DB(ABS/EXT/OPT)})
+exten => _X.,n,Set(OPT=${DB(ABS/EXTOPT/OPT)})
 ;タイムアウト取得
-exten => _X.,n,Set(TMO=${DB(ABS/EXT/TMO)})
+exten => _X.,n,Set(TMO=${DB(ABS/EXTOPT/TMO)})
 ;着信音パターン選択
 ;外線からのブラインド転送ならパターン変更しない
 exten => _X.,n,GotoIf($["${THISPOSITION}"="INBOUND"]?macrocheck)
-exten => _X.,n,Set(RGPT=${DB(ABS/EXT/RGPT)})
+exten => _X.,n,Set(RGPT=${DB(ABS/EXTOPT/RGPT)})
 ;キーシステム使用時に転送された場合にキーのピア書き直しマクロ挿入
 exten => _X.,n(macrocheck),Set(DMACRO=)
 exten => _X.,n,GotoIf($["${KID}"=""]?dodial)
@@ -92,7 +97,7 @@ exten => _X.,n,Set(DMACRO=U(macro-markme,${KID}))
 ;ダイヤル実行
 exten => _X.,n(dodial),Gosub(macro-getexttech,s,1)
 exten => _X.,n,gosub(macro-rgptcheck,s,1)
-exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT}b(macro-setringpattern,${RGPT},1))
+exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT}b(multi-macros^s^1(macro-setringpattern,${RGPT},selfpark-handler,s)))
 exten => _X.,n,Hangup
 ;内線グループへダイヤル
 exten => _X.,n(group),NoOp(内線グループ)
@@ -146,7 +151,7 @@ exten => did-in,n,gosub(macro-rgptcheck,s,1)
 exten => did-in,n,Set(TMO=${DB(ABS/DIO/TMO)})
 ;ダイヤル実行
 exten => did-in,n,Gosub(macro-getexttech,s,1)
-exten => did-in,n,Dial(${EXTTECH}/${PEER},${TMO},${OPT}b(macro-setringpattern,${RGPT},1))
+exten => did-in,n,Dial(${EXTTECH}/${PEER},${TMO},${OPT}b(multi-macros^s^1(macro-setringpattern,${RGPT},selfpark-handler,s)))
 exten => did-in,n,Hangup
 ;グループ着信の場合にはマクロ実行
 exten => did-in,n(group),NoOp(ダイヤルイン:グループ着信)
