--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -252,7 +252,7 @@ exten => _rhold1X,n,Goto(holdlp)
 exten => keyhandle,1,NoOp(${TRLOCK})
 ;TRLOCKが初期化されていなければ0にセットする
 exten => keyhandle,n,GotoIf($["${TRLOCK}"!=""]?chks)
-exten => keyhandle,n,Set(TRLOCK=0)
+exten => keyhandle,n,Set(GLOBAL(TRLOCK)=0)
 exten => keyhandle,n(chks),GotoIf($["${TRLOCK}"="0"]?kstart)
 ;ロック状態なら切断
 exten => keyhandle,n,Hangup
@@ -262,6 +262,7 @@ exten => keyhandle,n(kstart),Set(CHANNEL(hangup_handler_push)=key-unlock,s,1)
 exten => keyhandle,n,Set(GLOBAL(TRLOCK)=1)
 
 ;hintの状態によって処理分岐
+exten => keyhandle,n,Set(DYNAMIC_FEATURES=selfpark)
 exten => keyhandle,n,Goto(keyhandle-${DEVICE_STATE(Custom:KEYSYS${KID})},1)
 
 ;RINGING
@@ -595,7 +596,7 @@ exten => _kcall[1-9],n,Set(EXT=${RNG})
 exten => _kcall[1-9],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall[1-9],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall[1-9],n,Gosub(macro-getexttech,s,1)
-exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _kcall[1-9],n,Dial(${EXTTECH}/${PEER},,b(multi-macros^s^1(macro-setringpattern,${RGPT},selfpark-handler,s)))
 exten => _kcall[1-9],n(donothing),NoOp
 ;10-16スロット用
 exten => _kcall1[0-6],1,NoOp(キー着信${EXTEN:5:2})
@@ -616,7 +617,7 @@ exten => _kcall1[0-6],n,Set(EXT=${RNG})
 exten => _kcall1[0-6],n,Gosub(macro-ext2peer,s,1)
 exten => _kcall1[0-6],n,GotoIf($["${PEER}"=""]?donothing)
 exten => _kcall1[0-6],n,Gosub(macro-getexttech,s,1)
-exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _kcall1[0-6],n,Dial(${EXTTECH}/${PEER},,b(multi-macros^s^1(macro-setringpattern,${RGPT},selfpark-handler,s)))
 exten => _kcall1[0-6],n(donothing),NoOp
 
 ;PJSIP,SIPで発信時にPPIを設定するためのルーチン(Dialから呼ばれる)
