--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -46,9 +46,9 @@ exten => s,n(done),Return
 exten => s,1,NoOp(内線ピア名取得)
 ;ピアのオーバライド設定がある場合にはそれを使用する
 exten => s,n,GotoIf($["${PEEROVERRIDE}"!=""]?doc2)
-exten => s,n,Set(MPEER=${CHANNEL(peername)})
-exten => s,n,GotoIf($["${MPEER}"!=""]?doc)
 exten => s,n,Set(MPEER=${CHANNEL(endpoint)})
+exten => s,n,GotoIf($["${MPEER}"!=""]?doc)
+exten => s,n,Set(MPEER=${CHANNEL(peername)})
 exten => s,n(doc),Return
 exten => s,n(doc2),Set(MPEER=${PEEROVERRIDE})
 exten => s,n,Return
@@ -128,7 +128,8 @@ exten => s,n,Hangup
 exten => s,1,NoOp(規制情報チェック)
 ;C2C発信時に規制値チェックしない
 exten => s,n,GotoIf($["${C2COUT}"="YESC2C"]?togo)
-exten => s,n,Set(TMP=${CHANNEL(peername)})
+exten => s,n,GoSub(macro-getpeername,s,1)
+exten => s,n,Set(TMP=${MPEER})
 exten => s,n,GotoIf($["${TMP}"!=""]?doc)
 exten => s,n,Set(TMP=${CHANNEL(endpoint)})
 exten => s,n(doc),Set(LMT=${DB(ABS/LMT/${TMP})})
@@ -209,7 +210,7 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)U(macro-markme^${FROM})x${OPT}))
+exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})b(multi-macros^s^1(selfpark-handler,s,macro-setringpattern,${RGPT}))x${OPT}))
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -217,7 +218,7 @@ exten => s,n,GotoIf($["${DIALSTATUS}"="NOANSWER"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="CHANUNAVAIL"]?waitloop)
 exten => s,n,Goto(dobusy)
 ;キーシステムではない着信ならキーマクロなし
-exten => s,n(notkeysys),Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)x${OPT})
+exten => s,n(notkeysys),Dial(${TGT},${TMO},b(selfpark-handler^s^1)x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -379,6 +380,13 @@ exten => s,n,Set(CPBT=${DB(ABS/CPBT)})
 exten => s,n,GotoIf($["${CPBT}"!=""]?ends)
 exten => s,n,Set(CPBT=60)
 exten => s,n(ends),Return
+;セルフパーク時呼び戻し時間取得
+[get-sfptime]
+exten => s,1,NoOp
+exten => s,n,Set(SPBT=${DB(ABS/SPBT)})
+exten => s,n,GotoIf($["${SPBT}"!=""]?ends)
+exten => s,n,Set(SPBT=60)
+exten => s,n(ends),Return
 
 ;休日判定マクロ
 [macro-CHKHOLIDAY]
@@ -401,12 +409,12 @@ exten => s,n,Return
 ;外部サービス連携(着信通知)
 [external-notify]
 exten => s,1,NoOp(着信通知連携)
-;exten => s,n,NoOp(${ARG1})
-;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
-;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
-;exten => s,n,Goto(do_qpmnc)
-;exten => s,n(noname),Set(TMP_CIDNAME="")
-;exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
+exten => s,n,NoOp(${ARG1})
+exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
+exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
+exten => s,n,Goto(do_qpmnc)
+exten => s,n(noname),Set(TMP_CIDNAME="")
+exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
 exten => s,n,Return
 
 ;Slackサンプルが以下
@@ -440,6 +448,72 @@ exten => s,1,NoOp(キー外部連携)
 ;exten => s,n,DumpChan()
 ;exten => s,n,System(sh -x /var/lib/asterisk/qpmnd/qpmk.sh ${ARG2} ${ARG1} ${CID})
 exten => s,n,Return
+
+;自己保留(セルフパーク)
+[selfpark]
+exten => sfp,1,NoOp
+exten => sfp,n,GoSub(macro-whoami,s,1)
+;exten => sfp,n,DumpChan()
+exten => sfp,n,Set(TMPEXT=${CONNECTEDLINE(num)})
+exten => sfp,n,GotoIf($["${TMPEXT}"!="s"]?skips)
+exten => sfp,n,Set(TMPEXT=)
+exten => sfp,n(skips),Set(SFPCPEER=${DB(ABS/EXT/${TMPEXT})})
+exten => sfp,n,Set(MTARGET=${TMPEXT})
+exten => sfp,n,GotoIf($["${SFPCPEER}"!=""]?dopark)
+exten => sfp,n,Set(SFPCPEER=${DB(ABS/ERV/${TMPEXT})})
+exten => sfp,n,GotoIf($["${SFPCPEER}"!=""]?doparkp)
+exten => sfp,n,Set(SFTMP=${BLINDTRANSFER})
+exten => sfp,n,Set(SFTMP=${CUT(SFTMP,/,2)})
+exten => sfp,n,Set(SFTMP=${CUT(SFTMP,-,1)})
+exten => sfp,n,GotoIf($["${SFTMP}"=""]?nogo)
+exten => sfp,n,Set(SFPCPEER=${SFTMP})
+exten => sfp,n,Set(MTARGET=${SFTMP})
+exten => sfp,n,Goto(dopark)
+exten => sfp,n(doparkp),NoOp
+exten => sfp,n,Set(MTARGET=${TMPEXT})
+exten => sfp,n,Set(SFPCPEER=${TMPEXT})
+exten => sfp,n(dopark),Set(PARKINGLOT=${SFPCPEER})
+exten => sfp,n,GoSub(get-sfptime,s,1)
+exten => sfp,n,Park(,st(${SPBT}))
+exten => sfp,n(nogo),NoOp()
+
+;セルフパーク用ハンドラ(Dialでコール)
+[selfpark-handler]
+exten => s,1,NoOp
+exten => s,n,Set(DYNAMIC_FEATURES=selfpark)
+exten => s,n,Return
+;セルフパーク・タイムアウト戻り
+[selfptimedout]
+exten => s,1,NoOp
+exten => s,n,Set(CALLERID(name)=CB:${CALLERID(name)})
+exten => s,n,Goto(default,${MTARGET},btrans)
+exten => s,n,Hangup
+
+;自局桁数取得
+[get-mydigits]
+exten => s,1,NoOp(自局桁数取得)
+exten => s,n,Set(MDIGI=${DB(ABS/MDIGITS)})
+exten => s,n,GotoIf($["${MDIGI}"=""]?setdef)
+exten => s,n,Goto(backn)
+exten => s,n(setdef),Set(MDIGI=10)
+exten => s,n(backn),Return
+
+;複数マクロ実行用
+;引数はcontext,extenの順。Priorityは1固定
+[multi-macros]
+exten => s,1,NoOp(マルチマクロ)
+exten => s,n,Set(TMPI=1)
+exten => s,n(lp1),Set(TARG=ARG${TMPI})
+exten => s,n,Set(TMACRO=${${TARG}})
+exten => s,n,GotoIf($["${TMACRO}"=""]?backm)
+exten => s,n,Set(TMPI=$[${TMPI}+1])
+exten => s,n,Set(TARG=ARG${TMPI})
+exten => s,n,Set(TMACAG1=${${TARG}})
+exten => s,n,GotoIf($["${TMACAG1}"=""]?backm)
+exten => s,n,Gosub(${TMACRO},${TMACAG1},1)
+exten => s,n,Set(TMPI=$[${TMPI}+1])
+exten => s,n,Goto(lp1)
+exten => s,n(backm),Return
 
 ;Experimental
 ;メッセージングサポート
