--- a/exten/extensions.conf
+++ b/exten/extensions.conf
@@ -15,7 +15,9 @@ include => bok-blfhints
 include => bok-dials
 include => ext-hints
 ;テスト用
-include => ext-tests
+;include => ext-tests
+;自己保留
+include => selfpark
 
 ;固定パーキング
 #include extensions_fixedpark.conf
