--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -119,23 +119,30 @@ exten => _X.,n,Gosub(macro-groupdial,s,1(${PEER:1}))
 exten => _X.,1,NoOp(外線着信)
 exten => _X.,n,NoOp(${CALLERID(num)})
 exten => _X.,n,NoOp(${CALLERID(name)})
+exten => _X.,n,Set(INLID=${UNIQUEID})
 exten => _X.,n,Set(INCIDN=${CALLERID(num)})
 exten => _X.,n,Set(INCID=${CALLERID(num)})
-;着信番号ログ
-exten => _X.,n,GotoIf($["${DB(ABS/ILOG)}"!="YES"]?ilogs)
-exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : INCOMING CALL - ${CALLERID(num)}" >> /var/log/asterisk/call_incoming.log)
-exten => _X.,n,System(chmod g+w /var/log/asterisk/call_incoming.log)
-exten => _X.,n(ilogs),NoOp
-;;
+;着信時情報のDB保存(今のところCIDnumのみ)
+exten => _X.,n,Set(DB(ABS/LSTO/${INLID}/CIDN)=${CALLERID(num)})
+;ストレージ削除用ハンドラ(回線断時の情報削除)
+exten => _X.,n,Set(CHANNEL(hangup_handler_push)=delsto-afthang,s,1(${INLID}));
 ;外線着信を変数にセット
 exten => _X.,n,Set(THISPOSITION=INBOUND)
 ;非通知ブロック
 exten => _X.,n(anoncheck),NoOp
 exten => _X.,n,GotoIf($["${DB(ABS/ANB)}"!="1"]?gtarget)
 exten => _X.,n,GotoIf($["${INCID}"="anonymous"]?nokey)
+exten => _X.,n,GotoIf($["${INCID}"="Anonymous"]?nokey)
 exten => _X.,n,GotoIf($["${INCIDN}"=""]?nokey)
+exten => _X.,n(gtarget),NoOp
+;着信番号ログ
+exten => _X.,n,GotoIf($["${DB(ABS/ILOG)}"!="1"]?ilogs)
+;exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : INCOMING CALL - ${CALLERID(num)}" >> /var/log/asterisk/call_incoming.log)
+;exten => _X.,n,System(chmod g+w /var/log/asterisk/call_incoming.log)
+exten => _X.,n,GoSub(record-log,s,1(INCOMING,${INCIDN},${EXTEN},${INLID}))
+exten => _X.,n(ilogs),NoOp
 ;着番取得
-exten => _X.,n(gtarget),Set(TARGET=${EXTEN})
+exten => _X.,n,Set(TARGET=${EXTEN})
 exten => _X.,n,NoOp(着信先番号: ${TARGET})
 ;DTNを空に
 exten => _X.,n,Set(DTN=)
@@ -150,8 +157,9 @@ exten => _X.,n,GotoIf($["${RET}"!="1"]?blcont)
 ;拒否ログチェックと記録
 exten => _X.,n(dobl),GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
 exten => _X.,n,Log(NOTICE,"CALL BLOCKED - ${CALLERID(num)}")
-exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : CALL BLOCKED - ${CALLERID(num)}" >> /var/log/asterisk/call_reject.log)
-exten => _X.,n,System(chmod g+w /var/log/asterisk/call_reject.log)
+;exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : CALL BLOCKED - ${CALLERID(num)}" >> /var/log/asterisk/call_reject.log)
+;exten => _X.,n,System(chmod g+w /var/log/asterisk/call_reject.log)
+exten => _X.,n,Gosub(record-log,s,1(BLOCKED,${INCIDN},${EXTEN},${INLID}))
 ;着信拒否時の独自コンテキストチェック
 exten => _X.,n(blj1),Set(BLC=${DB(ABS/BLC)})
 exten => _X.,n,GotoIf($["${BLC}"!=""]?${BLC},s,1)
