--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -15,6 +15,11 @@ exten => localring,n(lp1),Ringing()
 exten => localring,n,Wait(10)
 exten => localring,n,Goto(lp1)
 ;
+;特殊内線(ゴミ箱)
+exten => trashbin,1,NoOp(ゴミ箱内線)
+exten => trashbin,n,Goto(trashbin,s,1)
+;
+;
 exten => _X.,1,NoOp(内線発信部)
 ; 実験的実装
 ;メッセージングサポート
@@ -127,7 +132,7 @@ exten => did-in,n(skippf),Set(EXT=${DIT})
 ;指定がある場合にはプレフィクス付加
 exten => did-in,n,GotoIf($["${DB(ABS/APF)}"!="1"]?pfskip)
 exten => did-in,n,Set(OPF=${DB(ABS/OGP1)})
-exten => did-in,n,Set(CALLERID(num)=${OPF}${CALLERID(num)}
+exten => did-in,n,Set(CALLERID(num)=${OPF}${CALLERID(num)})
 exten => did-in,n(pfskip),NoOp
 ;対象がグループか単独かをチェック
 ;頭がGの場合にはグループ着信
