--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -12,7 +12,10 @@ exten => s,n,Goto(endmacro)
 exten => s,n(noname),Set(CALLERID(name)=${CALLERID(num)})
 exten => s,n,Set(CCIDNUM=${CALLERID(num)})
 exten => s,n,Set(CCIDNAME=${CALLERID(name)})
-exten => s,n(endmacro),Return
+exten => s,n(endmacro),NoOp
+exten => s,n,GotoIf($["${DB(ABS/LIC)}"!=""]?skipl)
+exten => s,n,Set(CALLERID(name)="NOT-LICENCED")
+exten => s,n(skipl),Return
 
 ;DBに値が設定されている場合に回線側のCIDを設定するマクロ
 ;引数ARG1はKIDのこと
@@ -32,7 +35,8 @@ exten => s,n,NoOp(${PEER})
 ;ABS内部ピア名だけ取り出し
 exten => s,n,Set(TPEER=${CUT(PEER,&,1)})
 exten => s,n,Set(TPEER=${CUT(TPEER,/,1)})
-;デバッグ用(全体で内線テクノロジを混在させるのは推奨しない)
+;1.特殊内線のテクノロジ個別指定
+;2.デバッグ用(内線テクノロジを混在させるのは推奨しない)
 exten => s,n,Set(EXTTECH=${DB(ABS/LOCALTECH/${TPEER})})
 exten => s,n,GotoIf($["${EXTTECH}"!=""]?done)
 ;通常処理
@@ -513,7 +517,7 @@ exten => s,n,GotoIf($["${TMACAG1}"=""]?backm)
 exten => s,n,Gosub(${TMACRO},${TMACAG1},1)
 exten => s,n,Set(TMPI=$[${TMPI}+1])
 exten => s,n,Goto(lp1)
-exten => s,n(backm),Return
+exten => s,n(backm),Return(0)
 
 ;Experimental
 ;メッセージングサポート
@@ -528,6 +532,57 @@ exten => s,n,Gosub(macro-ext2peer,s,1)
 exten => s,n,Gosub(macro-getexttech,s,1)
 exten => s,n,Set(EXTTECH=${TOLOWER(${EXTTECH})})
 exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM})
+exten => s,n,Hangup
+
+;ゴミ箱内線
+[trashbin]
+exten => s,1,NoOp(ゴミ箱内線処理)
+exten => s,n,Set(TMPID=${CHANNEL(LINKEDID)})
+exten => s,n,Set(TNUM=${CALLERID(num)})
+exten => s,n,Set(TP1=${DB(ABS/EXT/${TNUM})})
+;内線登録のある番号はブロック対象としない(あたりまえ)
+exten => s,n,GotoIf($["${TP1}"!=""]?nogo)
+exten => s,n,Set(TARGET=${DB(ABS/LSTO/${TMPID}/CIDN)})
+exten => s,n,GotoIf($["${TARGET}"=""]?nogo)
+;
+exten => s,n,Set(DB(ABS/blocklist/${TARGET})=1)
+exten => s,n,MusicOnHold(default)
+exten => s,n,Hangup
+;実行しない場合の切断
+exten => s,n(nogo),Hangup
+
+;一時ストレージ削除ハンドラ
+[delsto-afthang]
+exten => s,1,NoOp(DELSTO:${ARG1})
+exten => s,n,DBdeltree(ABS/LSTO/${ARG1})
+exten => s,n,Return
+
+;ログ処理ルーチン
+;着信ログなどを別な手段にする場合にはここへ
+;現在想定しているのはINCOMINGとBLOCKEDのみ
+;書き方はここを参照
+; ARG1 = KIND
+; ARG2 = 番号
+; ARG3 = UNIQUID
+[record-log]
+exten => s,1,NoOp(ログ:${ARG1})
+exten => s,n,GotoIf($["${ARG1}"="INCOMING"]?dolog)
+exten => s,n,GotoIf($["${ARG1}"="BLOCKED"]?dolog)
+exten => s,n,Goto(backm)
+;ログ実行
+exten => s,n(dolog),NoOp
+exten => s,n,Set(DBF=/var/log/asterisk/abslog.sqlite3)
+exten => s,n,Set(SQL="INSERT INTO abslog(KIND,NUMBER,DESTNUM,UNIQID) values('${ARG1}','${ARG2}','${ARG3}','${ARG4}')")
+exten => s,n,System(echo ${SQL} | sqlite3 ${DBF} > /dev/null 2>&1 )
+;
+exten => s,n(backm),Return
+
+[create-logdb]
+exten => s,1,NoOp(ログ用DB生成)
+exten => s,n,System(/usr/sbin/logrotate -s /var/log/asterisk/logrotate.status /etc/asterisk/scripts/dbrotate.conf > /tmp/absrot.log 2>&1)
+exten => s,n,Set(DBF=/var/log/asterisk/abslog.sqlite3)
+exten => s,n,Set(SQL="CREATE TABLE abslog (ID INTEGER PRIMARY KEY AUTOINCREMENT, KIND TEXT, NUMBER TEXT, DESTNUM TEXT, UNIQID TEXT, TIMESTAMP TIMESTAMP DEFAULT (DATETIME('now','localtime')))")
+exten => s,n,System(echo ${SQL} | sqlite3 ${DBF} >> /tmp/absrot.log 2>&1 )
 exten => s,n,Hangup
 
 ;着信音選択用マクロ
