--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -63,13 +63,23 @@ exten => s,n,Hangup
 exten => s,1,NoOp(アナウンス後切断)
 ;いきなり応答すると相手方が認識しにくいため少し待つ
 exten => s,n,Ringing
+exten => s,n,Set(LPC=${DB(ABS/TCPBRP)})
+exten => s,n,GotoIf($["${LPC}"!=""]?nxt1)
+exten => s,n,Set(LPC=1)
+exten => s,n(nxt1),Set(OVPIN=${DB(ABS/TCOVRPIN)})
 exten => s,n,Set(WTI=${DB(ABS/WTI)})
 exten => s,n,GotoIf($["${WTI}"!=""]?twait)
 exten => s,n,Set(WTI=10)
 exten => s,n(twait),Wait(${WTI})
 exten => s,n,Answer
-exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcmessage)
+;exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcmessage)
+exten => s,n(pblp),NoOp(音声再生)
+exten => s,n,Read(INPIN,/var/spool/asterisk/recording/abs-tcmessage,,,${LPC},2)
+exten => s,n,GotoIf($["${INPIN}"="${OVPIN}"]?ovin)
 exten => s,n,Hangup
+exten => s,n(ovin),NoOp
+exten => s,n,Set(DIT=${DB(ABS/TCOVREXT)})
+exten => s,n,Goto(inhouse-did,did-in,1)
 
 ;用件録音して切断
 [tcvm]
@@ -77,15 +87,21 @@ exten => s,1,NoOp(用件録音後切断)
 ;いきなり応答すると相手方が認識しにくいため少し待つ
 exten => s,n,Ringing
 exten => s,n,Set(WTI=${DB(ABS/WTI)})
+exten => s,n,Set(OVPIN=${DB(ABS/TCOVRPIN)})
 exten => s,n,GotoIf($["${WTI}"!=""]?twait)
 exten => s,n,Set(WTI=5)
 exten => s,n(twait),Wait(${WTI})
 exten => s,n,Answer
 exten => s,n,Playback(silence/1)
-exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcrmessage)
+;exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcrmessage)
+exten => s,n,Read(INPIN,/var/spool/asterisk/recording/abs-tcrmessage,,,,2)
+exten => s,n,GotoIf($["${INPIN}"="${OVPIN}"]?ovin)
 exten => s,n,VoiceMail(2000,s)
 exten => s,n,Playback(silence/1)
 exten => s,n,Hangup
+exten => s,n(ovin),NoOp
+exten => s,n,Set(DIT=${DB(ABS/TCOVREXT)})
+exten => s,n,Goto(inhouse-did,did-in,1)
 
 ;内線からのメッセージ録音用
 [msgrec1]
