--- a/exten/pjsip.conf
+++ b/exten/pjsip.conf
@@ -17,11 +17,17 @@ permit=202.173.5.198/32
 ;#include "pjsip_trunk_ogw.conf"
 ;#include "pjsip_trunk_smart.conf"
 ;#include "pjsip_trunk_brastel.conf"
+#include pjsip_trunk_ogw1.conf
+#include pjsip_trunk_basix1.conf
 
 ;試験用に電話機を疑似トランクとする場合
 ;本番環境には組み込まないこと
-;#include "pjsip_demophone.conf"
+#include "pjsip_demophone.conf"
 
 ;拠点間接続用
-;#include "pjsip_trunk_intra_me.conf"
+#include "pjsip_trunk_intra_me.conf"
+#include "pjsip_trunk_intra_ikebukuro.conf"
 ;#include "pjsip_trunk_intra_itabashi.conf"
+
+
+
