--- a/exten/pjsip_demophone.conf
+++ b/exten/pjsip_demophone.conf
@@ -30,3 +30,36 @@ acl=inhouse-phones
 auth=demophone
 outbound_auth = demophone
 aors = demophone
+
+[demophone2]
+type=aor
+max_contacts = 2
+qualify_frequency = 30
+authenticate_qualify = no
+
+[demophone2]
+type=auth
+username=demophone2
+password=demopass
+
+[demophone2]
+type=endpoint
+context = demotrunk2
+dtmf_mode = rfc4733
+call_group = 1
+pickup_group = 1
+language = ja
+disallow = all
+allow = ulaw
+rtp_symmetric = yes
+force_rport = yes
+direct_media = no
+send_pai = yes
+send_rpid = yes
+rewrite_contact = yes
+inband_progress = yes
+allow_subscribe = yes
+acl=inhouse-phones
+auth=demophone2
+outbound_auth = demophone2
+aors = demophone2
