--- a/exten/http.conf
+++ b/exten/http.conf
@@ -1,8 +1,9 @@
 [general]
 servername=Asterisk
+;enabled=yes
 enabled=no
-;bindaddr=0.0.0.0
-;bindport=8088
+bindaddr=0.0.0.0
+bindport=8088
 ;enablestatic=yes
 ;prefix=
 ;tlsenable=yes
