--- a/exten/modules.conf
+++ b/exten/modules.conf
@@ -1,4 +1,5 @@
 [modules]
+noload=>chan_woomera.so
 autoload=yes
 ;
 noload => pbx_gtkconsole.so
@@ -28,3 +29,4 @@ noload => app_adsiprog.so
 noload => app_macro.so
 [global]
 chan_modem.so=no
+noload=>chan_woomera.so
