--- a/exten/pjsip.conf
+++ b/exten/pjsip.conf
@@ -8,25 +8,22 @@ local_net = 192.168.0.0/16
 type=acl
 deny=0.0.0.0/0.0.0.0
 permit=192.168.0.0/16
-permit=61.213.230.145/32
-permit=61.213.230.153/32
-permit=202.173.5.198/32
-
+;Some ITSP needs permit section
 
 ;#include "pjsip_trunk_hgw.conf"
 ;#include "pjsip_trunk_ogw.conf"
 ;#include "pjsip_trunk_smart.conf"
 ;#include "pjsip_trunk_brastel.conf"
-#include pjsip_trunk_ogw1.conf
-#include pjsip_trunk_basix1.conf
+;#include pjsip_trunk_ogw1.conf
+;#include pjsip_trunk_basix1.conf
 
 ;試験用に電話機を疑似トランクとする場合
 ;本番環境には組み込まないこと
-#include "pjsip_demophone.conf"
+;#include "pjsip_demophone.conf"
 
 ;拠点間接続用
-#include "pjsip_trunk_intra_me.conf"
-#include "pjsip_trunk_intra_ikebukuro.conf"
+;#include "pjsip_trunk_intra_me.conf"
+;#include "pjsip_trunk_intra_ikebukuro.conf"
 ;#include "pjsip_trunk_intra_itabashi.conf"
 
 
