--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -180,13 +180,14 @@ exten => _*61XXXXXXXX.,n,Gosub(macro-chkrestrict,s,1(3))
 exten => _*61XXXXXXXX.,n,Set(NUM=${EXTEN:3})
 exten => _*61XXXXXXXX.,n,Answer
 exten => _*61XXXXXXXX.,n,Wait(1)
-exten => _*61XXXXXXXX.,n,Set(DB(ABS/blocklist/${NUM})=1)
+exten => _*61XXXXXXXX.,n,Set(NOWDT=${STRFTIME(${EPOCH},,%Y-%m-%d/%H:%M:%S)})
+exten => _*61XXXXXXXX.,n,Set(DB(ABS/blocklist/${NUM})=${NOWDT})
 exten => _*61XXXXXXXX.,n,Playtones(!532/500,!0/200)
 exten => _*61XXXXXXXX.,n,Wait(1)
 exten => _*61XXXXXXXX.,n,Hangup
 ;着信拒否番号削除
 exten => _*62XXXXXXXX.,1,NoOp(着信拒否番号削除)
-exten => _*62XXXXXXXX.,n,Gossub(macro-chkrestrict,s,1(3))
+exten => _*62XXXXXXXX.,n,Gosub(macro-chkrestrict,s,1(3))
 exten => _*62XXXXXXXX.,n,Set(NUM=${EXTEN:3})
 exten => _*62XXXXXXXX.,n,Answer
 exten => _*62XXXXXXXX.,n,Wait(1)
