--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -153,7 +153,7 @@ exten => _X.,n,GotoIf($["${TMPCIDN}"=""]?dobl)
 ;着信拒否番号チェック
 exten => _X.,n(blck1),NoOp(着信拒否番号チェック)
 exten => _X.,n,Set(RET=${DB(ABS/blocklist/${INCIDN})})
-exten => _X.,n,GotoIf($["${RET}"!="1"]?blcont)
+exten => _X.,n,GotoIf($["${RET}"=""]?blcont)
 ;拒否ログチェックと記録
 exten => _X.,n(dobl),GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
 exten => _X.,n,Log(NOTICE,"CALL BLOCKED - ${CALLERID(num)}")
