--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -319,11 +319,11 @@ exten => keyhandle-INUSE-1,n,Playback(beep)
 ;モニタorバージをチェック
 exten => keyhandle-INUSE-1,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/MMD)}"="S"]?dospy)
 ;デフォルトはバージモード
-exten => keyhandle-INUSE-1,n,ChanSpy(${DB(KEYTEL/KEYSYS${KID}/PEER)},sSB)
+exten => keyhandle-INUSE-1,n,ChanSpy(${DB(KEYTEL/KEYSYS${KID}/PEER)},sSBE)
 exten => keyhandle-INUSE-1,n,Hangup
 ;スパイモード
 exten => keyhandle-INUSE-1,n(dospy),NoOp
-exten => keyhandle-INUSE-1,n,ChanSpy(${DB(KEYTEL/KEYSYS${KID}/PEER)},sS)
+exten => keyhandle-INUSE-1,n,ChanSpy(${DB(KEYTEL/KEYSYS${KID}/PEER)},sSE)
 exten => keyhandle-INUSE-1,n,Hangup
 
 ;ONHOLD
