--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -537,6 +537,8 @@ exten => s,n,Hangup
 ;ゴミ箱内線
 [trashbin]
 exten => s,1,NoOp(ゴミ箱内線処理)
+;滞留防止
+exten => s,n,Set(TIMEOUT(absolute)=60)
 exten => s,n,Set(TMPID=${CHANNEL(LINKEDID)})
 exten => s,n,Set(TNUM=${CALLERID(num)})
 exten => s,n,Set(TP1=${DB(ABS/EXT/${TNUM})})
@@ -545,11 +547,15 @@ exten => s,n,GotoIf($["${TP1}"!=""]?nogo)
 exten => s,n,Set(TARGET=${DB(ABS/LSTO/${TMPID}/CIDN)})
 exten => s,n,GotoIf($["${TARGET}"=""]?nogo)
 ;
-exten => s,n,Set(DB(ABS/blocklist/${TARGET})=1)
+exten => s,n,Set(NOWDT=${STRFTIME(${EPOCH},,%Y-%m-%d/%H:%M:%S)})
+exten => s,n,Set(DB(ABS/blocklist/${TARGET})=${NOWDT})
 exten => s,n,MusicOnHold(default)
 exten => s,n,Hangup
 ;実行しない場合の切断
 exten => s,n(nogo),Hangup
+exten => h,1,Hangup
+;タイムアウト切断
+exten => t,1,Hangup
 
 ;一時ストレージ削除ハンドラ
 [delsto-afthang]
