--- a/exten/extensions.conf
+++ b/exten/extensions.conf
@@ -34,6 +34,8 @@ include => selfpark
 
 ;各種マクロ定義
 #include extensions_macros.conf
+;IVR
+#include extensions_ivr.conf
 
 ;内線ヒント
 #include extensions_exthints.conf
