--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -82,6 +82,13 @@ exten => *865,n,Goto(msgrvt,s,1)
 exten => *869,1,NoOp
 exten => *869,n,Goto(vmcmd,s,1)
 
+;IVRメニュー音声録音,再生
+exten => *870,1,NoOp
+exten => *870,n,Gosub(macro-chkrestrict,s,1,(3))
+exten => *870,n,Goto(msgrec-ivr,s,1)
+exten => *871,1,NoOp
+exten => *871,n,Goto(msgpb-ivr,s,1)
+
 ;モーニングコール機能
 ;セット
 exten => _*77XXXX,1,NoOp(モーニングコールセット)
