--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -165,34 +165,24 @@ exten => _X.,n(blj1),Set(BLC=${DB(ABS/BLC)})
 exten => _X.,n,GotoIf($["${BLC}"!=""]?${BLC},s,1)
 exten => _X.,n,Goto(nokey)
 exten => _X.,n(blcont),NoOp
+
 ;時間外制御チェック(1)ダイヤルインチェック用
 exten => _X.,n,NoOp(DI時間外制御チェック)
-exten => _X.,n,GotoIf($["${DB(ABS/DID/TCS)}"="1"]?dcheck)
-exten => _X.,n,Set(TCC=${DB(ABS/TCC)})
-;強制設定されているかどうかチェック
-exten => _X.,n,GotoIf($["${TCC}"="3"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCC}"="4"]?tcvm,s,1)
-;時刻定義読出し
-exten => _X.,n,Set(TSPEC=${DB(ABS/TCSPEC)})
-exten => _X.,n,NoOp(時間定義:${TSPEC})
-;時間定義が行われていなければ休日チェックへ
-exten => _X.,n,GotoIf($["${TSPEC}"=""]?dihlcheck)
-;時間定義がある場合には休日チェックへ
-exten => _X.,n,GotoIfTime(${TSPEC}?dihlcheck)
-exten => _X.,n,GotoIf($["${TCC}"="1"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCC}"="2"]?tcvm,s,1)
-;上記条件でなければ祝日・休日チェック
-exten => _X.,n(dihlcheck),NoOp
+exten => _X.,n,GotoIf($["${DB(ABS/DID/TCS)}"="1"]?ivrcheck)
+;休日チェックフラグ
 exten => _X.,n,Set(THS=${DB(ABS/DID/THS)})
-exten => _X.,n,GotoIf($["${THS}"="1"]?dcheck)
-;変数 HOLIDAY に値が入る(なければ通常)
-exten => _X.,n,GoSub(macro-CHKHOLIDAY,s,1)
-exten => _X.,n,GotoIf($["${HOLIDAY}"=""]?dcheck)
-exten => _X.,n,Set(TCHC=${DB(ABS/TCHC)})
-exten => _X.,n,GotoIf($["${TCHC}"="1"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCHC}"="2"]?tcvm,s,1)
-;条件にあわなければ通常処理
+exten => _X.,n,GoSub(tc-check,${EXTEN},1)
 
+;IVRチェック
+exten => _X.,n(ivrcheck),NoOp(IVR処理チェック)
+exten => _X.,n,Set(IVRCHK=${DB(ABS/IVR/NUM/any)})
+exten => _X.,n,GotoIf($["${IVRCHK}"="YES"]?ivrgo)
+exten => _X.,n,Set(IVRCHK=${DB(ABS/IVR/NUM/${EXTEN})})
+exten => _X.,n,GotoIf($["${IVRCHK}"="YES"]?ivrgo)
+exten => _X.,n,Goto(ivrback)
+exten => _X.,n(ivrgo),Goto(ivrmenu,${EXTEN},1)
+;IVR戻り箇所(通常着信)
+exten => _X.,n(ivrback),NoOp(IVR処理終了)
 
 ;ダイヤルイン着信チェック
 ;ダイヤルイン着信の場合にはキー処理させない
@@ -219,27 +209,10 @@ exten => _X.,n,Goto(inhouse-did,did-in,1)
 
 ;時間外制御チェック(2)キーシステム用
 exten => _X.,n(tcheck),NoOp(KEY時間外制御チェック)
-exten => _X.,n(chktype),Set(TCC=${DB(ABS/TCC)})
-;強制設定されているかどうかチェック
-exten => _X.,n,GotoIf($["${TCC}"="3"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCC}"="4"]?tcvm,s,1)
-;時刻定義読出し
-exten => _X.,n,Set(TSPEC=${DB(ABS/TCSPEC)})
-exten => _X.,n,NoOp(時間定義:${TSPEC})
-;時間定義が行われていなければ休日チェックへ
-exten => _x.,n,GotoIf($["${TSPEC}"=""]?khlcheck)
-;時間定義がある場合には分岐・休日チェックへ
-exten => _x.,n,GotoIfTime(${TSPEC}?khlcheck)
-exten => _X.,n,GotoIf($["${TCC}"="1"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCC}"="2"]?tcvm,s,1)
-;上記条件でなければ祝日・休日チェック
-;変数 HOLIDAY に値が入る(なければ通常)
-exten => _X.,n(khlcheck),GoSub(macro-CHKHOLIDAY,s,1)
-exten => _X.,n,GotoIf($["${HOLIDAY}"=""]?keycheck)
-exten => _X.,n,Set(TCHC=${DB(ABS/TCHC)})
-exten => _X.,n,GotoIf($["${TCHC}"="1"]?tcaonly,s,1)
-exten => _X.,n,GotoIf($["${TCHC}"="2"]?tcvm,s,1)
-;条件にあわなければ通常処理
+;休日チェックフラグ(DI時以外はチェック)
+exten => _X.,n,Set(THS=0)
+;時間外・休日チェック
+exten => _X.,n,GoSub(tc-check,${EXTEN},1)
 
 ;着番の着信先キー取得
 exten => _X.,n(keycheck),NoOp(キー着信処理)
