--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -214,7 +214,7 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})b(multi-macros^s^1(selfpark-handler,s,macro-setringpattern,${RGPT}))x${OPT}))
+exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})b(multi-macros^s^1(selfpark-handler,s,macro-setringpattern,${RGPT}))x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -518,6 +518,36 @@ exten => s,n,Gosub(${TMACRO},${TMACAG1},1)
 exten => s,n,Set(TMPI=$[${TMPI}+1])
 exten => s,n,Goto(lp1)
 exten => s,n(backm),Return(0)
+
+;時間外・休日チェック
+[tc-check]
+;時間外制御チェック
+exten => _X.,1,NoOp(時間外制御チェック)
+exten => _X.,n,Set(TCC=${DB(ABS/TCC)})
+;強制設定されているかどうかチェック
+exten => _X.,n,GotoIf($["${TCC}"="3"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="4"]?tcvm,s,1)
+;時刻定義読出し
+exten => _X.,n,Set(TSPEC=${DB(ABS/TCSPEC)})
+exten => _X.,n,NoOp(時間定義:${TSPEC})
+;時間定義が行われていなければ休日チェックへ
+exten => _X.,n,GotoIf($["${TSPEC}"=""]?hlcheck)
+;時間定義がある場合には休日チェックへ
+exten => _X.,n,GotoIfTime(${TSPEC}?hlcheck)
+exten => _X.,n,GotoIf($["${TCC}"="1"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="2"]?tcvm,s,1)
+;上記条件でなければ祝日・休日チェック
+exten => _X.,n(hlcheck),NoOp
+exten => _X.,n,GotoIf($["${THS}"="1"]?backm)
+;変数 HOLIDAY に値が入る(なければ通常)
+exten => _X.,n,GoSub(macro-CHKHOLIDAY,s,1)
+exten => _X.,n,GotoIf($["${HOLIDAY}"=""]?backm)
+exten => _X.,n,Set(TCHC=${DB(ABS/TCHC)})
+exten => _X.,n,GotoIf($["${TCHC}"="1"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCHC}"="2"]?tcvm,s,1)
+;条件にあわなければ通常処理
+exten => _X.,n(backm),Return
+
 
 ;Experimental
 ;メッセージングサポート
