--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -137,6 +137,22 @@ exten => s,n,Wait(1)
 exten => s,n,Answer
 exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcrmessage)
 
+[msgrec-ivr]
+exten => s,1,NoOp(応答メッセージ録音:IVRメニュー音声)
+exten => s,n,Wait(1)
+exten => s,n,Set(PIN=${DB(ABS/IVR/RPIN)})
+exten => s,n,GotoIf($["${PIN}"=""]?nogo)
+exten => s,n,Playback(beep)
+exten => s,n,Read(TPIN,,10,,3,30)
+exten => s,n,GotoIf($["${PIN}"="${TPIN}"]?rmain)
+exten => s,n(nogo),Congestion
+exten => s,n(rmain),Record(/var/spool/asterisk/recording/abs-ivrmenu.gsm)
+[msgpb-ivr]
+exten => s,1,NoOp(応答メッセージ再生:IVRメニュー音声)
+exten => s,n,Wait(1)
+exten => s,n,Answer
+exten => s,n,Playback(/var/spool/asterisk/recording/abs-ivrmenu)
+
 [msgrvt]
 exten => s,1,NoOp(応答メッセージをデフォルトに戻す)
 exten => s,n,Wait(1)
