--- a/exten/extensions_ivr.conf
+++ b/exten/extensions_ivr.conf
@@ -29,7 +29,7 @@ exten => _X.,n,Answer()
 exten => _X.,n(loop1),NoOp
 exten => _X.,n,Background(/var/spool/asterisk/recording/abs-ivrmenu)
 exten => _X.,n,WaitExten(10)
-exten => _X.,n,Goto(loop)
+exten => _X.,n,Goto(loop1)
 ;戻り
 exten => _X.,n,Goto(incoming,${EXTEN},ivrback)
 
