--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -168,9 +168,12 @@ exten => _X.,n(blcont),NoOp
 
 ;時間外制御チェック(1)ダイヤルインチェック用
 exten => _X.,n,NoOp(DI時間外制御チェック)
-exten => _X.,n,GotoIf($["${DB(ABS/DID/TCS)}"="1"]?ivrcheck)
+exten => _X.,n,GotoIf($["${DB(ABS/DID/TCS)}"="1"]?dncheck)
+exten => _X.,n,GoSub(tc-check,${EXTEN},1)
+exten => _X.,n,Goto(ivrcheck)
 ;休日チェックフラグ
-exten => _X.,n,Set(THS=${DB(ABS/DID/THS)})
+exten => _X.,n(dncheck),Set(THS=${DB(ABS/DID/THS)})
+exten => _X.,n,GotoIf($["${THS}"="1"]?ivrcheck)
 exten => _X.,n,GoSub(tc-check,${EXTEN},1)
 
 ;IVRチェック
@@ -209,7 +212,7 @@ exten => _X.,n,Goto(inhouse-did,did-in,1)
 
 ;時間外制御チェック(2)キーシステム用
 exten => _X.,n(tcheck),NoOp(KEY時間外制御チェック)
-;休日チェックフラグ(DI時以外はチェック)
+;休日チェックフラグ(DI時以外はチェックする)
 exten => _X.,n,Set(THS=0)
 ;時間外・休日チェック
 exten => _X.,n,GoSub(tc-check,${EXTEN},1)
