--- a/exten/extensions_ivr.conf
+++ b/exten/extensions_ivr.conf
@@ -26,6 +26,7 @@ exten => _X.,n(domenu),Set(TIMEOUT(digit)=1)
 exten => _X.,n,Ringing
 exten => _X.,n,Wait(5)
 exten => _X.,n,Answer()
+exten => _X.,n,Playback(silence/1)
 exten => _X.,n(loop1),NoOp
 exten => _X.,n,Background(/var/spool/asterisk/recording/abs-ivrmenu)
 exten => _X.,n,WaitExten(10)
