--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -527,6 +527,7 @@ exten => _X.,n,Set(TCC=${DB(ABS/TCC)})
 ;強制設定されているかどうかチェック
 exten => _X.,n,GotoIf($["${TCC}"="3"]?tcaonly,s,1)
 exten => _X.,n,GotoIf($["${TCC}"="4"]?tcvm,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="6"]?ivrmenu,${EXTEN},1)
 ;時刻定義読出し
 exten => _X.,n,Set(TSPEC=${DB(ABS/TCSPEC)})
 exten => _X.,n,NoOp(時間定義:${TSPEC})
@@ -536,6 +537,7 @@ exten => _X.,n,GotoIf($["${TSPEC}"=""]?hlcheck)
 exten => _X.,n,GotoIfTime(${TSPEC}?hlcheck)
 exten => _X.,n,GotoIf($["${TCC}"="1"]?tcaonly,s,1)
 exten => _X.,n,GotoIf($["${TCC}"="2"]?tcvm,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="5"]?ivrmenu,${EXTEN},1)
 ;上記条件でなければ祝日・休日チェック
 exten => _X.,n(hlcheck),NoOp
 exten => _X.,n,GotoIf($["${THS}"="1"]?backm)
