--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -72,6 +72,7 @@ exten => s,n,GotoIf($["${WTI}"!=""]?twait)
 exten => s,n,Set(WTI=10)
 exten => s,n(twait),Wait(${WTI})
 exten => s,n,Answer
+exten => s,n,Playback(silence/1)
 ;exten => s,n,Playback(/var/spool/asterisk/recording/abs-tcmessage)
 exten => s,n(pblp),NoOp(音声再生)
 exten => s,n,Read(INPIN,/var/spool/asterisk/recording/abs-tcmessage,,,${LPC},2)
