--- a/exten/extensions_ivr.conf
+++ b/exten/extensions_ivr.conf
@@ -41,6 +41,8 @@ exten => _[0-9],n,Set(CTX=${DB(ABS/IVR/MENU/${EXTEN}/CTX)})
 exten => _[0-9],n,GotoIf($["${CTX}"=""]?ivrmenu,${ORGEXT},loop1)
 exten => _[0-9],n,Set(VAL=${DB(ABS/IVR/MENU/${EXTEN}/VAL)})
 exten => _[0-9],n,Goto(${CTX},${ORGEXT},1)
+;#と*の捕捉用
+exten => _[#,*],1,Goto(ivrmenu,${ORGEXT},loop1)
 
 ;IVR各処理
 [ivr-item1];通常着信処理
