change tcs behavior

--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -2,21 +2,21 @@
 
 ;時間制御切り替え処理
 [tccont]
-exten => _*82[0-4],1,NoOp(時間制御切り替え:${EXTEN:3:1})
-exten => _*82[0-4],n,Answer
-exten => _*82[0-4],n,Wait(1)
+exten => _*82[0-6],1,NoOp(時間制御切り替え:${EXTEN:3:1})
+exten => _*82[0-6],n,Answer
+exten => _*82[0-6],n,Wait(1)
 ;PIN番号チェック
-exten => _*82[0-4],n,Set(PIN=${DB(ABS/TCPIN)})
-exten => _*82[0-4],n,GotoIf($["${PIN}"=""]?nogo)
-exten => _*82[0-4],n,Playback(beep)
-exten => _*82[0-4],n,Read(TPIN,,10,,3,30)
-exten => _*82[0-4],n,GotoIf($["${PIN}"="${TPIN}"]?tccw)
-exten => _*82[0-4],n(nogo),Congestion
-exten => _*82[0-4],n(tccw),Set(DB(ABS/TCC)=${EXTEN:3:1})
-exten => _*82[0-4],n,Playback(digits/${EXTEN:3:1})
-exten => _*82[0-4],n,Playback(abs-confirm)
-exten => _*82[0-4],n,Morsecode(S)
-exten => _*82[0-4],n,Goto(s-cond${EXTEN:3:1},1)
+exten => _*82[0-6],n,Set(PIN=${DB(ABS/TCPIN)})
+exten => _*82[0-6],n,GotoIf($["${PIN}"=""]?nogo)
+exten => _*82[0-6],n,Playback(beep)
+exten => _*82[0-6],n,Read(TPIN,,10,,3,30)
+exten => _*82[0-6],n,GotoIf($["${PIN}"="${TPIN}"]?tccw)
+exten => _*82[0-6],n(nogo),Congestion
+exten => _*82[0-6],n(tccw),Set(DB(ABS/TCC)=${EXTEN:3:1})
+exten => _*82[0-6],n,Playback(digits/${EXTEN:3:1})
+exten => _*82[0-6],n,Playback(abs-confirm)
+exten => _*82[0-6],n,Morsecode(S)
+exten => _*82[0-6],n,Goto(s-cond${EXTEN:3:1},1)
 exten => s-cond0,1,NoOp
 exten => s-cond0,n,Set(DEVICE_STATE(Custom:TCCOND)=NOT_INUSE)
 exten => s-cond1,1,NoOp
@@ -27,6 +27,10 @@ exten => s-cond3,1,NoOp
 exten => s-cond3,n,Set(DEVICE_STATE(Custom:TCCOND)=INUSE)
 exten => s-cond4,1,NoOp
 exten => s-cond4,n,Set(DEVICE_STATE(Custom:TCCOND)=INUSE)
+exten => s-cond5,1,NoOp
+exten => s-cond5,n,Set(DEVICE_STATE(Custom:TCCOND)=NOT_INUSE)
+exten => s-cond6,1,NoOp
+exten => s-cond6,n,Set(DEVICE_STATE(Custom:TCCOND)=INUSE)
 
 ;時間制御切り替え自動トグル
 [tcat]
